fixed adaptive on mobile landscape in help modal

--- a/src/components/HelpDesk/HelpDesk.scss
+++ b/src/components/HelpDesk/HelpDesk.scss
@@ -128,3 +128,9 @@
     width: 100%;
   }
 }
+
+@media screen and (orientation: landscape) and (max-height: 350px) {
+  .help__alert {
+    margin-bottom: 5px;
+  }
+}
