--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -267,9 +267,10 @@
 @media screen and (orientation: landscape) and (max-height: 580px) {
     .help__row {
         display: block;
+        margin-bottom: 6px !important;
 
         &:not(:last-child) {
-            margin-bottom: 0;
+            margin-bottom: 0px;
         }
 
         &:first-child {
@@ -304,9 +305,14 @@
     }
 
     .help__label {
+        display: flex;
         font-size: 12px;
         line-height: 12px;
         width: 100%;
+    }
+
+    .help__label_textarea {
+        margin-top: 0px;
     }
 
     .help__inputWrapper {
@@ -339,10 +345,6 @@
         max-height: 50px;
     }
 
-    .help__row:last-child {
-        margin-bottom: 5px;
-    }
-
     .help__error {
         position: absolute;
         top: -10px;
@@ -357,5 +359,12 @@
         top: -10px;
         right: 2px;
         text-align: end;
+    }
+}
+
+@media screen and (orientation: landscape) and (max-height: 350px) {
+    .help__row {
+        display: block;
+        margin-bottom: 4px !important;
     }
 }
