--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -300,7 +300,7 @@
   .modal__help {
     padding: 30px 20px 30px 20px;
     width: 500px;
-    height: 369px;
+    height: 350px;
     max-height: 100%;
 
     & .modal__closeButton {
@@ -314,15 +314,15 @@
   }
 }
 
-@media screen and (orientation: landscape) and (max-height: 400px) {
+@media screen and (orientation: landscape) and (max-height: 350px) {
   .modal__help {
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 10px 20px;
     width: 500px;
-    height: 337px;
-    max-height: 337px;
+    height: 315px;
+    max-height: 100%;
 
     & .modal__closeButton {
-      top: 15px;
+      top: 18px;
       right: 20px;
       height: 12px;
     }
